--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ input, select, textarea {
 /* Type */
 
 	html {
-		font-size: 16pt;
+		font-size: 14pt;
 	}
 
 		@media screen and (max-width: 1680px) {
@@ -150,8 +150,9 @@ input, select, textarea {
 	body, input, select, textarea {
 		font-family: "Merriweather", Georgia, serif;
 		font-weight: 300;
-		font-size: 1rem;
-		line-height: 2.375;
+		font-size: 0.9rem;
+        line-height: 1.75;
+        /* text-align: "left"; */
 	}
 
 	a {
@@ -176,7 +177,7 @@ input, select, textarea {
 	}
 
 	p {
-		text-align: justify;
+		text-align: left;
 		margin: 0 0 2rem 0;
 	}
 
@@ -2587,20 +2588,25 @@ input, select, textarea {
 
 		.image.left {
 			float: left;
-			margin: 0 2rem 2rem 0;
-			top: 0.75rem;
+			margin: 0 1rem 1rem 0;
+			top: 0.5rem;
 		}
 
 		.image.right {
 			float: right;
-			margin: 0 0 2rem 2rem;
-			top: 0.75rem;
+			margin: 0 0 0rem 0rem;
+			top: 0.5rem;
 		}
+
 
 		.image.fit {
 			display: block;
-			margin: 2.5rem 0;
-			width: 100%;
+            margin: 2.5rem 0;
+            width:100%;
+            align-content: center;
+
+            /* height: 50%; */
+            /* height:; */
 		}
 
 			.image.fit:first-child {
@@ -2608,7 +2614,9 @@ input, select, textarea {
 			}
 
 			.image.fit img {
-				width: 100%;
+                margin-left: auto;
+                margin-right: auto;
+				width: 60%;
 			}
 
 		.image.main {
